# ragent

./: .env_sample  pyproject.toml  requirements.txt
core/llm/ollama/: completion.py
utils/: basic_utils.py  st_utils.py
