[project]
name = "ragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autogen-agentchat==0.4.6",
    "autogen-ext==0.4.6",
    "chroma-hnswlib==0.7.3",
    "chromadb==0.5.0",
    "duckduckgo-search==6.3.5",
    "fake-useragent==1.5.1",
    "groq==0.5.0",
    "html2text==2024.2.26",
    "httpx==0.27.2",
    "langchain==0.3.15",
    "langchain-community==0.3.15",
    "loguru==0.7.2",
    "markdown==3.4.1",
    "markitdown[all]==0.1.1",
    "openai==1.61.1",
    "openai-whisper==20231117",
    "pandas==1.5.3",
    "pdf2image==1.16.3",
    "pydantic==2.10.5",
    "pyperclip==1.8.2",
    "python-dotenv==1.0.1",
    "rank-bm25==0.2.2",
    "requests==2.32.0",
    "sentence-transformers==2.3.1",
    "streamlit==1.44.1",
    "streamlit-antd-components==0.3.2",
    "streamlit-authenticator==0.4.1",
    "streamlit-float==0.3.5",
    "tabulate==0.9.0",
    "tiktoken==0.5.2",
    "trafilatura==1.8.1",
    "unstructured-inference==0.5.31",
    "unstructured-pytesseract==0.3.12",
    "unstructured[all-docs]==0.10.16",
]
